# PydanticAI_Experimentation

./: .gitignore  pyproject.toml  roulette.py  roulette_enhanced.py  roulette_openai_only.py
chat/: app.py  chat_app.py  chat_app.ts  database.py  models.py  tools.py  utils.py
