[project]
name = "pydanticai-experimentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.25.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-sqlite3>=0.57b0",
    "pydantic-ai>=1.0.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
]
